--- a/dev/sass/pages/personal.sass
+++ b/dev/sass/pages/personal.sass
@@ -47,6 +47,10 @@
     .item
       position: relative
       margin-bottom: 45px
+      &.after-none
+        margin-bottom: 0
+        &:after
+          display: none
       &:after
         position: absolute
         right: -30px
@@ -66,6 +70,13 @@
 
     // skill
     //-----------------------------------------------------------------------------------
+    .competence
+      position: relative
+      &.js-open
+        .right-competence
+          opacity: 1
+          visibility: visible
+
     .skill
       margin: 0 -30px
       li
@@ -77,6 +88,8 @@
           background-color: #e2e3e9
           cursor: pointer
           .skill-nav
+            opacity: 1
+            visibility: visible
             margin: -24px -30px -24px 20px
             height: 66px
             li
@@ -92,6 +105,8 @@
         float: right
 
     .skill-nav
+      opacity: 0
+      visibility: hidden
       @extend %clear-fix
       display: inline-block
       float: right
@@ -116,6 +131,69 @@
         color: black
         font: 400 13px $open
 
+    .right-competence
+      opacity: 0
+      visibility: hidden
+      position: absolute
+      top: -35px
+      right: -15px
+      bottom: 31px
+      width: 290px
+      background-color: #e2e3e9
+      .title
+        @extend %clear-fix
+        margin-bottom: 10px
+        padding-left: 30px
+        color: black
+        font: 400 13px/67px $open
+        span
+          color: #9b9b9b
+
+        button
+          float: right
+          width: 67px
+          height: 67px
+          background-color: #c8cccf
+          text-align: center
+          line-height: 67px
+          img
+            vertical-align: middle
+      .list-competence
+        padding: 0px 10px 0 20px
+        li
+          position: relative
+          display: block
+          padding: 10px 35px 10px 10px
+          color: black
+          font: 400 13px $open
+          transition: all .12s ease
+          &.active
+            color: $color-blue
+
+          &:after
+            position: absolute
+            top: 50%
+            right: 10px
+            visibility: hidden
+            margin-top: -9px
+            width: 18px
+            height: 18px
+            background: url(../images/icons/info-icon.svg) no-repeat center
+            content: ''
+            opacity: 0
+
+          &:hover
+            background-color: #c8cccf
+            color: $color-blue
+            cursor: pointer
+            &:after
+              visibility: visible
+              opacity: 1
+
+      .scroll-wrap
+        box-sizing: border-box
+        padding-right: 10px
+        height: 470px
     // more-link
     //-----------------------------------------------------------------------------------
     .more-link
@@ -140,6 +218,35 @@
 
         &:after
           right: 230px
+      .list-buttons
+        position: absolute
+        right: 0
+        top: 0
+        li
+          display: inline-block
+          padding: 0
+          float: left
+          max-width: 105px
+          min-width: 66px
+          height: 66px
+          line-height: 66px
+          text-align: center
+          background-color: #dce1e7
+          border-left: 1px solid white
+          &:first-child
+            border-left: none
+          &:after
+            display: none
+          &:before
+            display: none
+          a
+            display: inline-block
+            color: black
+            text-decoration: none
+            padding: 15px 10px
+            font: 400 13px/18px $open
+            img
+              display: inline-block
 
       .wrap-btn
         position: absolute
@@ -182,17 +289,26 @@
 
     .border-block
       @extend %clear-fix
-      margin-top: 30px
+      margin-top: 28px
       margin-bottom: 10px
       padding: 25px 30px
       border: 1px solid #4a72f5
       box-sizing: border-box
+      &.css-gren
+        border-color: rgba(#4a72f5, .1)
+
       &.css-pur
         border-color: #fb5570
       .el-btn
         float: right
         &.delete
           margin-top: 14px
+
+        &.give
+          margin-top: 11px
+      p
+        font: 400 13px $open
+        margin-bottom: 5px
 
       .el-progress-wrap
         margin-top: 5px
@@ -220,7 +336,6 @@
           content: ','
         &:hover
           text-decoration: underline
-
 
     // section-1
     //-----------------------------------------------------------------------------------
@@ -279,18 +394,67 @@
         margin-top: 12px
         opacity: .5
 
+
     // section-2
     //-----------------------------------------------------------------------------------
     .section-2
+      .small
+        color: #9b9b9b
+        font: 400 13px/20px $open
 
+      .right-competence
+        top: 50px
+        bottom: 40px
+        .scroll-wrap
+          height: 280px
       .item
         margin-bottom: 10px
         &:after
           display: none
 
       .skill
+        .name
+          max-width: 170px
         li
-          //padding: 12px 30px
+          padding: 16px 30px
+          &:hover
+            padding: 20px 30px
+            .skill-nav
+              opacity: 1
+              visibility: visible
+              margin: -18px -30px -20px 20px
+              height: 58px
+              li
+                padding: 16px 24px
+
+      .skill-nav
+        @extend %clear-fix
+        display: inline-block
+        float: right
+        overflow: hidden
+        margin: -20px -30px -20px 20px
+        width: 150px
+        height: 50px
+        transition: all .12s ease
+        opacity: 0
+        visibility: hidden
+        li
+          float: left
+          padding: 16px 24px
+          border-left: 1px solid white
+          transition: all .12s ease
+          &:first-child
+            border-left: none
+        a
+          text-decoration: none
+          color: black
+          font: 400 13px $open
+          i:before
+            margin: 0
+            color: #9b9b9b
+            text-decoration: none
+            font-size: 22px
+            vertical-align: sub
 
       .this-course
         margin-top: 20px
@@ -354,3 +518,56 @@
           text-align: center
           color: #61e7d6
           font: 700 13px/42px $open
+
+    // .section-5
+    //-----------------------------------------------------------------------------------
+    .section-5
+      .partner-lists
+        @extend %clear-fix
+        margin-top: 15px
+        li
+          margin-bottom: 5px
+          float: left
+
+    .academic-plan.no-info > li
+      padding-right: 170px
+      &:after
+        display: none
+
+    .wrap-list-process
+      position: relative
+      display: block
+      width: 100%
+      margin-top: 20px
+      @extend %clear-fix
+
+      a
+        position: absolute
+        bottom: 0px
+        right: -140px
+        color: #9b9b9b
+        font: 400 13px $open
+        text-decoration: none
+        &:hover
+          text-decoration: underline
+
+      .item-list-process
+        @extend %clear-fix
+        float: left
+        width: 50%
+        padding-right: 20px
+        box-sizing: border-box
+        margin-top: 30px
+
+        .name
+          display: block
+          float: left
+          color: black
+          font: 400 13px $open
+
+        .el-progress-wrap
+          float: right
+          width: 110px
+
+          .progress
+            width: 70px
