--- a/dev/templates/profession.html
+++ b/dev/templates/profession.html
@@ -149,86 +149,109 @@
                             <section class="css-shadow competence-section">
                                 <h2 class="title-section">Мои компетенции</h2>
                                 <div class="competence">
-                                    <div class="left-competence">
-                                        <div class="item">
-                                            <div class="title-competence">Технические компетенции</div>
-                                            <ul class="skill">
-                                                <li>
-                                                    <span class="name">Программирование</span>
-                                                    <span class="progress-wrap">
+                                    <div class="item">
+                                        <div class="title-competence">Технические компетенции 55%</div>
+                                        <ul class="skill">
+                                            <li>
+                                                <span class="name">Программирование</span>
+                                                <ul class="skill-nav">
+                                                    <li><span>идет обучение</span></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
+                                                </ul>
+                                                <span class="el-progress-wrap">
                                                         <span class="prosent">56%</span>
                                                         <span class="progress">
                                                             <span class="bar" style="width:56%;"></span>
                                                         </span>
                                                     </span>
-
-                                                </li>
-                                                <li>
-                                                    <span class="name">Maschine Learning</span>
-                                                    <span class="progress-wrap">
+                                            </li>
+                                            <li>
+                                                <span class="name">Maschine Learning</span>
+                                                <ul class="skill-nav">
+                                                    <li><span>идет обучение</span></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
+                                                </ul>
+                                                <span class="el-progress-wrap">
                                                         <span class="prosent">73%</span>
                                                         <span class="progress">
                                                             <span class="bar" style="width:73%;"></span>
                                                         </span>
                                                     </span>
 
-                                                </li>
-                                                <li>
-                                                    <span class="name">Анализ Big Data</span>
-                                                    <span class="progress-wrap">
+                                            </li>
+                                            <li>
+                                                <span class="name">Анализ Big Data</span>
+                                                <ul class="skill-nav">
+                                                    <li><span>идет обучение</span></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
+                                                </ul>
+                                                <span class="el-progress-wrap">
                                                         <span class="prosent">23%</span>
                                                         <span class="progress">
                                                             <span class="bar" style="width:23%;"></span>
                                                         </span>
                                                     </span>
-
-                                                </li>
-                                                <li>
-                                                    <span class="name">Микробиом пресных водоемов</span>
-                                                    <span class="progress-wrap">
+                                            </li>
+                                            <li>
+                                                <span class="name">Микробиом пресных водоемов</span>
+                                                <ul class="skill-nav">
+                                                    <li><span>идет обучение</span></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
+                                                </ul>
+                                                <span class="el-progress-wrap">
                                                         <span class="prosent"></span>
                                                         <span class="progress">
                                                             <span class="bar" style="width:0;"></span>
                                                         </span>
                                                     </span>
-
-                                                </li>
-                                            </ul>
-                                            <a class="more-link" href="#"><img src="images/icons/arrow-down.svg" alt="">
-                                                Еще 7 навыков</a>
-                                        </div>
-                                        <div class="item">
-                                            <div class="title-competence">Социальные компетенции</div>
-                                            <ul class="skill">
-                                                <li>
-                                                    <span class="name">Микробиом пресных водоемов</span>
-                                                    <span class="progress-wrap">
-                                                        <span class="prosent">13%</span>
+                                            </li>
+                                        </ul>
+                                        <a class="more-link" href="#"><i class="icon-angle-down"></i>
+                                            Еще 7 навыков</a>
+                                    </div>
+                                    <div class="item after-none">
+                                        <div class="title-competence">Социальные компетенции 15%</div>
+                                        <ul class="skill">
+                                            <li>
+                                                <span class="name">Анализ Big Data</span>
+                                                <ul class="skill-nav">
+                                                    <li><span>идет обучение</span></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
+                                                </ul>
+                                                <span class="el-progress-wrap">
+                                                        <span class="prosent">23%</span>
                                                         <span class="progress">
-                                                            <span class="bar" style="width:13%;"></span>
+                                                            <span class="bar" style="width:23%;"></span>
                                                         </span>
                                                     </span>
-
-                                                </li>
-                                                <li>
-                                                    <span class="name">Микробиом водоемов</span>
-                                                    <span class="progress-wrap">
+                                            </li>
+                                            <li>
+                                                <span class="name">Микробиом пресных водоемов</span>
+                                                <ul class="skill-nav">
+                                                    <li><span>идет обучение</span></li>
+                                                    <li><a href="#"><img src="images/icons/info-icon.svg" alt=""></a></li>
+                                                    <li><a href="#" class="js-toggle-menu"><i class="icon-angle-down"></i></a></li>
+                                                </ul>
+                                                <span class="el-progress-wrap">
                                                         <span class="prosent"></span>
                                                         <span class="progress">
                                                             <span class="bar" style="width:0;"></span>
                                                         </span>
                                                     </span>
-
-                                                </li>
-                                            </ul>
-                                            <a class="more-link" href="#"><img src="images/icons/arrow-down.svg" alt="">
-                                                Еще 7 навыков</a>
-                                        </div>
+                                            </li>
+                                        </ul>
+                                        <a class="more-link" href="#"><i class="icon-angle-down"></i>
+                                            Еще 7 навыков</a>
                                     </div>
                                     <div class="right-competence">
                                         <div class="title">
                                             8 из 15 <span>компетенций</span>
-                                            <button><img src="images/icons/arrow-up-icon.svg" alt=""></button>
+                                            <button class="js-toggle-close"><img src="images/icons/arrow-up-icon.svg" alt=""></button>
                                         </div>
                                         <div id="scroll-wrap" class="scroll-wrap">
                                             <ul class="list-competence">
