update icon font

--- a/css/plugins/font-icon-codes.css
+++ b/css/plugins/font-icon-codes.css
@@ -9,6 +9,7 @@
 .icon-rectangle:before { content: '\e807'; } /* '' */
 .icon-search-btn:before { content: '\e808'; } /* '' */
 .icon-tw:before { content: '\e809'; } /* '' */
+.icon-glas-icon:before { content: '\e80a'; } /* '' */
 .icon-ok-1:before { content: '\e80b'; } /* '' */
 .icon-vk:before { content: '\e80d'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
