--- a/dev/templates/personal.html
+++ b/dev/templates/personal.html
@@ -337,7 +337,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block">
                                             <div class="text-wrap">
                                                 <div class="title">Product Designer</div>
@@ -349,7 +349,7 @@
                                             <a href="#" class="el-btn blue-style">Мое резюме</a>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block css-pur">
                                             <div class="text-wrap">
                                                 <div class="title">Product Manager</div>
@@ -375,12 +375,12 @@
                                             </span>
                                         </span>
                                     </div>
-                                    <div class="col-xs-8">
+                                    <div class="col-sm-8">
                                         <p class="style-text-5">До завершения текущей траектории осталось 7 месяцев.
                                             Она включает 5 курсов и 1 специализацию.
                                         </p>
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-sm-4">
                                         <p class="style-text-5">Вы уже прошли 5 курсов.
                                             <a href="#">Показать все</a></p>
 
@@ -458,7 +458,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block">
                                             <div class="text-wrap">
                                                 <div class="title">Junior Data Analyst</div>
@@ -606,12 +606,12 @@
                                             </span>
                                         </span>
                                     </div>
-                                    <div class="col-xs-8">
+                                    <div class="col-sm-8">
                                         <p class="style-text-5">До завершения текущей траектории осталось 7 месяцев.
                                             Она включает 5 курсов и 1 специализацию.
                                         </p>
                                     </div>
-                                    <div class="col-xs-4">
+                                    <div class="col-sm-4">
                                         <p class="style-text-5">Вы уже прошли 5 курсов.
                                             <a href="#">Показать все</a></p>
 
@@ -729,7 +729,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-8 col-md-6">
                                         <div class="border-block">
                                             <div class="text-wrap">
                                                 <div class="title">Junior Data Analyst</div>
