--- a/css/plugins/font-icon.css
+++ b/css/plugins/font-icon.css
@@ -5,7 +5,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'font-icon';
-    src: url('../font/font-icon.svg?5959586#font-icon') format('svg');
+    src: url('../font/font-icon.svg?31854644#font-icon') format('svg');
   }
 }
 */
@@ -55,6 +55,7 @@
 .icon-rectangle:before { content: '\e807'; } /* '' */
 .icon-search-btn:before { content: '\e808'; } /* '' */
 .icon-tw:before { content: '\e809'; } /* '' */
+.icon-glas-icon:before { content: '\e80a'; } /* '' */
 .icon-ok-1:before { content: '\e80b'; } /* '' */
 .icon-vk:before { content: '\e80d'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
