--- a/dev/sass/pages/specialization.sass
+++ b/dev/sass/pages/specialization.sass
@@ -76,6 +76,9 @@
     float: left
     box-sizing: border-box
     width: 50%
+    @media (max-width: $screen-xs-max)
+      width: 100%
+
   .col-sm-6
     margin-bottom: 20px
 
