--- a/dev/sass/components/elements.sass
+++ b/dev/sass/components/elements.sass
@@ -15,15 +15,17 @@
 
   .rating > label:before
     margin: 3.8px
-    font-size: 14px
-    font-family: FontAwesome
+    font-size: 16px
+    font-family: "font-icon"
     display: inline-block
-    content: "\f005"
+    content: "\e80c"
     cursor: pointer
-
+    //\e80c
+    //\e80e
+    //\e80f
 
   .rating > .half:before
-    content: "\f089"
+    content: "\e80f"
     position: absolute
 
 
