static page added

--- a/dev/sass/pages/index.sass
+++ b/dev/sass/pages/index.sass
@@ -288,27 +288,28 @@
 
 
   .section-8
-    margin: 40px auto 50px
-    .item-serves
-      text-align: center
-      @media (max-width: $screen-xs-max)
-        margin-bottom: 70px
-        &:last-child
-          margin-bottom: 0
-      img
-        margin-bottom: 27px
-        max-width: 151px
-        width: 100%
-        height: auto
-      p
-        display: block
-        margin: 0 auto
-        max-width: 290px
-        color: black
-        font: 400 18px/24px $open
-        @media (max-width: $screen-sm-max)
-          font-size: 14px
-          line-height: 20px
+    @extend .el-labelcircle
+    // margin: 40px auto 50px
+    // .item-serves
+    //   text-align: center
+    //   @media (max-width: $screen-xs-max)
+    //     margin-bottom: 70px
+    //     &:last-child
+    //       margin-bottom: 0
+    //   img
+    //     margin-bottom: 27px
+    //     max-width: 151px
+    //     width: 100%
+    //     height: auto
+    //   p
+    //     display: block
+    //     margin: 0 auto
+    //     max-width: 290px
+    //     color: black
+    //     font: 400 18px/24px $open
+    //     @media (max-width: $screen-sm-max)
+    //       font-size: 14px
+    //       line-height: 20px
 
 
   .carousel
