--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -29,6 +29,7 @@
 @import pages/profession.sass
 @import pages/specialization.sass
 @import pages/personal.sass
+@import pages/static-page.sass
 
 
 
