--- a/dev/templates/static-page.html
+++ b/dev/templates/static-page.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-sm-12 text-left">
                     <h2>
-                      Гарантии зачета курса онлайн-образования в вашем университете
+                      Гарантии <b>зачета курса онлайн-образования в вашем университете</b>
                     </h2>
                     <div class="row section-banner-split2">
                       <div class="col-xs-12 col-sm-6">
@@ -42,10 +42,12 @@
 
     <div class="page-content">
       <div class="container">
-        <div class="static-page-toptext">
-          <p>
-            Раз в две недели генеральный директор «Нетологии-групп» Максим Спиридонов в аналитической программе «Рунетология» беседует с топ-менеджерами крупнейших компаний Рунета.
-          </p>
+        <div class="row">
+          <div class="static-page-toptext">
+            <p>
+              Раз в две недели генеральный директор «Нетологии-групп» Максим Спиридонов в аналитической программе «Рунетология» беседует с топ-менеджерами крупнейших компаний Рунета.
+            </p>
+          </div>
         </div>
       </div>
       
@@ -80,50 +82,51 @@
       <article>
         <div class="container">
           <div class="singlepage-content">
-            
-            <div class="singlepage-content-txt">
-              
-                <p>
-                  Каждый квартал я наблюдаю за выступлениями своих коллег, которые рассказывают о проделанной работе и предстоящих проектах. К сожалению, мало кто умеет презентовать четко, понятно и убедительно. Говорят много, иногда не по теме, с кучей терминов и иностранных слов. Так, вместо отведенных 10 минут, речь затягивается на полчаса. В аудитории начинают ерзать, переговариваться и копаться в телефонах. Все сидят и думают об обеде, а не о том, что говорит выступающий.
-                </p>
-
-                <p>
-                  Мои коллеги считают, что только ораторы, лекторы, бизнес-тренеры пишут сценарии своих выступлений, а маркетологам, логистам, финансистам этого делать не нужно. Достаточно нарисовать числа и графики на слайдах, а прокомментировать можно и без подготовки. В результате люди ничего не понимает и мысленно отключаются от презентации.
-                </p>
-
-                <p>
-                  Чтобы выступить «без потерь» и уложиться в отведенное время, составим план.
-                </p>
-
-                <p>
-                  Каждый квартал я наблюдаю за выступлениями своих коллег, которые рассказывают о проделанной работе и предстоящих проектах. К сожалению, мало кто умеет презентовать четко, понятно и убедительно. Говорят много, иногда не по теме, с кучей терминов и иностранных слов. Так, вместо отведенных 10 минут, речь затягивается на полчаса. В аудитории начинают ерзать, переговариваться и копаться в телефонах. Все сидят и думают об обеде, а не о том, что говорит выступающий.
-                </p>
-
-            </div>
-
-            <div class="singlepage-content-bottom">
-              <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                  <a class="singlepage-content-bottom-back" href="#">
-                    <i class="icon-long-arrow-left icon-larr"></i>
-                    <span>Назад</span> 
-                  </a>
-                </div>
-              
-                <div class="col-xs-12 col-sm-6 singlepage-content-bottom-right">
+           
+              <div class="singlepage-content-txt">
+                
                   <p>
-                    Поделиться
+                    Каждый квартал я наблюдаю за выступлениями своих коллег, которые рассказывают о проделанной работе и предстоящих проектах. К сожалению, мало кто умеет презентовать четко, понятно и убедительно. Говорят много, иногда не по теме, с кучей терминов и иностранных слов. Так, вместо отведенных 10 минут, речь затягивается на полчаса. В аудитории начинают ерзать, переговариваться и копаться в телефонах. Все сидят и думают об обеде, а не о том, что говорит выступающий.
                   </p>
-                  <ul class="social">
-                    <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a class="tw" href="#"><i class="icon-tw"></i></a></li>
-                    <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-                    <li><a class="youtube" href="#"><i class="icon-youtube-play"></i></a></li>
-                  </ul>
+
+                  <p>
+                    Мои коллеги считают, что только ораторы, лекторы, бизнес-тренеры пишут сценарии своих выступлений, а маркетологам, логистам, финансистам этого делать не нужно. Достаточно нарисовать числа и графики на слайдах, а прокомментировать можно и без подготовки. В результате люди ничего не понимает и мысленно отключаются от презентации.
+                  </p>
+
+                  <p>
+                    Чтобы выступить «без потерь» и уложиться в отведенное время, составим план.
+                  </p>
+
+                  <p>
+                    Каждый квартал я наблюдаю за выступлениями своих коллег, которые рассказывают о проделанной работе и предстоящих проектах. К сожалению, мало кто умеет презентовать четко, понятно и убедительно. Говорят много, иногда не по теме, с кучей терминов и иностранных слов. Так, вместо отведенных 10 минут, речь затягивается на полчаса. В аудитории начинают ерзать, переговариваться и копаться в телефонах. Все сидят и думают об обеде, а не о том, что говорит выступающий.
+                  </p>
+
+              </div>
+
+              <div class="singlepage-content-bottom">
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <a class="singlepage-content-bottom-back" href="#">
+                      <i class=" icon-left"></i>
+                      <span>Назад</span> 
+                    </a>
+                  </div>
+                
+                  <div class="col-xs-12 col-sm-6 singlepage-content-bottom-right">
+                    <p>
+                      Поделиться
+                    </p>
+                    <ul class="social">
+                      <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
+                      <li><a class="tw" href="#"><i class="icon-tw"></i></a></li>
+                      <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
+                      <li><a class="youtube" href="#"><i class="icon-youtube-play"></i></a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-            </div>
 
+            
           </div>
         </div>
     </article>
