--- a/css/plugins/font-icon-codes.css
+++ b/css/plugins/font-icon-codes.css
@@ -15,6 +15,7 @@
 .icon-vk:before { content: '\e80d'; } /* '' */
 .icon-star-empty:before { content: '\e80e'; } /* '' */
 .icon-star-half:before { content: '\e80f'; } /* '' */
+.icon-eye-o:before { content: '\e810'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-angle-left:before { content: '\f104'; } /* '' */
 .icon-angle-right:before { content: '\f105'; } /* '' */
