--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,3 @@
-/*
-   Animation example, for spinners
-*/
-.animate-spin {
-  -moz-animation: spin 2s infinite linear;
-  -o-animation: spin 2s infinite linear;
-  -webkit-animation: spin 2s infinite linear;
-  animation: spin 2s infinite linear;
-  display: inline-block;
-}
-@-moz-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@-o-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@-ms-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-@keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -moz-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-
 
 .icon-arrow-l:before { content: '\e800'; } /* '' */
 .icon-mail:before { content: '\e801'; } /* '' */
@@ -1879,6 +1793,67 @@ html {
   text-decoration: none;
   font-size: 14px; }
 
+b.error {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: 4px;
+  height: 16px;
+  color: #fb5570;
+  font: 400 11px/1.2 "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+
+.form-input.error:not(.mod-pass),
+.form-input.valid:not(.mod-pass),
+.icon-pass {
+  position: relative; }
+  .form-input.error:not(.mod-pass):before,
+  .form-input.valid:not(.mod-pass):before,
+  .icon-pass:before {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 100%;
+    font-family: "font-icon";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    text-decoration: inherit;
+    margin-right: 0.2em;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 40px;
+    margin-left: 0.2em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
+
+.form-input.error:not(.mod-pass):before {
+  color: #fb5570;
+  content: ""; }
+
+.form-input.valid:not(.mod-pass):before {
+  color: #61e7d6;
+  content: ""; }
+
+.icon-pass {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 100%;
+  color: black;
+  line-height: 40px;
+  text-decoration: none; }
+  .icon-pass:before {
+    font-size: 14px;
+    content: ""; }
+  .icon-pass.show:before {
+    content: ""; }
+
 .modal-button {
   margin: 100px 0 50px; }
   .modal-button li:not(:first-child) {
@@ -1927,6 +1902,14 @@ html {
 .sign-up {
   width: 570px;
   padding: 52px 103px 58px; }
+  @media (max-width: 767px) {
+    .sign-up {
+      padding: 52px 40px 58px;
+      width: 460px; } }
+  @media (max-width: 479px) {
+    .sign-up {
+      padding: 52px 20px 58px;
+      width: 300px; } }
 
 .sign-social {
   display: inline-block;
@@ -1982,6 +1965,11 @@ html {
   .up-header .sign-up-btn.show {
     margin-right: 54px;
     color: #3a3e45; }
+    @media (max-width: 479px) {
+      .up-header .sign-in-btn.show,
+      .up-header .sign-up-btn.show {
+        margin-right: 0;
+        margin-bottom: 10px; } }
 .up-header .in-for {
   color: #9b9b9b;
   font: 400 14px/1.2 "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
@@ -1998,19 +1986,31 @@ html {
     .sign-in-content label span,
     .sign-up-content label span {
       color: #fb5570; }
-  .sign-in-content b.error,
-  .sign-up-content b.error {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    margin-top: 4px;
-    height: 16px;
-    color: #fb5570;
-    font: 400 11px/1.2 "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
   .sign-in-content .form-buttons,
   .sign-up-content .form-buttons {
     margin-top: 22px; }
+
+.sign-in-content .el-btn {
+  width: 180px;
+  font-size: 14px; }
+  @media (max-width: 479px) {
+    .sign-in-content .el-btn {
+      width: 120px; } }
+.sign-in-content .forgot-pass-link {
+  margin-left: 38px;
+  font: 400 14px/1 "Open Sans", Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  @media (max-width: 479px) {
+    .sign-in-content .forgot-pass-link {
+      margin-left: 20px; } }
+
+.sign-up-content .el-btn {
+  width: 100%;
+  height: 70px;
+  font-size: 18px; }
+  @media (max-width: 767px) {
+    .sign-up-content .el-btn {
+      height: 50px;
+      font-size: 15px; } }
 
 .sign-thx {
   width: 480px;
@@ -4482,8 +4482,9 @@ html {
       .static-page .css-profession .section-banner-split2 {
         margin-bottom: 20px; }
         .static-page .css-profession .section-banner-split2 div {
-          text-align: center;
-          margin-bottom: 20px; }
+          text-align: center; }
+          .static-page .css-profession .section-banner-split2 div:first-child {
+            margin-bottom: 20px; }
         .static-page .css-profession .section-banner-split2 .text-style-3 {
           margin-right: 0;
           vertical-align: middle; }
